--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ main {
     gap: 20px;
 }
 .card {
+    margin:20px;
     padding: 20px;
     text-align: center;
     border-radius: 15px;
@@ -121,7 +122,5 @@ button:hover {
     .container {
         flex-direction: column;
     }
-    .grid {
-        grid-template-columns: 1fr;
-    }
+    
 }
