--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
     background: #e0e0e0;
     border: none;
     padding: 12px;
-    box-shadow: 4px 4px 8px #bebebe, -4px -4px 8px #ffffff;
+   /* box-shadow: 4px 4px 8px #bebebe, -4px -4px 8px #ffffff;*/
 }
 .container {
     display: flex;
@@ -94,6 +94,13 @@ main {
     box-shadow: 8px 8px 16px #bebebe, -8px -8px 16px #ffffff;
 }
 button {
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background: #e0e0e0;
+    cursor: pointer;
+}
+.button {
     border: none;
     padding: 10px 20px;
     border-radius: 10px;
